--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,66 @@
-﻿<Window x:Class="Prog_122L2_Notes.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Prog_122L2_Notes"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+﻿<Window
+    x:Class="Prog_122L2_Notes.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Prog_122L2_Notes"
+    mc:Ignorable="d"
+    Title="MainWindow"
+    Height="450"
+    Width="800">
+    <!--Layout Tag-->
+    <Canvas>
+        <Button
+            x:Name="btnPopUpMessage"
+            Content="Pop Up Message"
+            Canvas.Left="144"
+            Canvas.Top="162"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Click="btnPopUpMessage_Click" />
 
-    </Grid>
+        <Label
+            Content="First Name"
+            Canvas.Left="144"
+            Canvas.Top="109"
+            RenderTransformOrigin="1.648,0.516"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center" />
+        <TextBox
+            x:Name="txtFirstName"
+            Canvas.Left="224"
+            TextWrapping="Wrap"
+            Text="Charles"
+            Canvas.Top="113"
+            Width="120"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top" />
+        <TextBox
+            x:Name="txtnum1"
+            Canvas.Left="211"
+            TextWrapping="Wrap"
+            Text="TextBox"
+            Canvas.Top="242"
+            Width="120" />
+        <TextBox
+            x:Name="txtnum2"
+            Canvas.Left="463"
+            TextWrapping="Wrap"
+            Text="TextBox"
+            Canvas.Top="242"
+            Width="120" />
+        <Button
+            x:Name="btnAddNumber"
+            Content="Button"
+            Canvas.Left="224"
+            Canvas.Top="319"
+            Click="btnAddNumber_Click_1" />
+
+        <!--Button
+        TextBox
+        Label
+        MessageBox-->
+
+    </Canvas>
 </Window>
